...
            padding: const EdgeInsets.all(4),
            child: Column(
              children: [
                _card([
                  _title("\nEmbedded SDK Functionality"),
                  _description(
                      "SDK Version: ${BuildConfig.SDK_VERSION.capitalize()}",
                      paddingTop: 8.0,
                      paddingBottom: 0.0),
                  _description(
                      "Environment: ${BuildConfig.ENVIRONMENT.capitalize()}",
                      paddingTop: 0.0,
                      paddingBottom: 8.0),
                ]),
                _card([
                  _title("\nGet Started"),
                  _subTitle("Bind Passkey"),
...
